--- a/Experiments/Lucas/Experiment1/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/Lucas/Experiment1/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
         app:layout_constraintVertical_bias="0.136" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:onClick="onClick"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,9 +42,11 @@
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.267"
-        tools:layout_editor_absoluteX="15dp" />
+        app:layout_constraintVertical_bias="0.266" />
 
     <TextView
         android:id="@+id/textView3"
@@ -54,8 +57,10 @@
         android:textAlignment="viewEnd"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="12dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.052"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -74,35 +79,42 @@
         app:layout_constraintVertical_bias="0.053" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="202dp"
-        android:layout_height="41dp"
+        android:id="@+id/editPass"
+        android:layout_width="246dp"
+        android:layout_height="43dp"
         android:layout_marginTop="27dp"
         android:ems="10"
+        android:hint="@string/enter_pass"
         android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="199dp"
-        android:layout_height="43dp"
+        android:id="@+id/editEmail"
+        android:layout_width="250dp"
+        android:layout_height="46dp"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/editUser" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="170dp"
-        android:layout_height="47dp"
+        android:id="@+id/editUser"
+        android:layout_width="227dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="4dp"
         android:ems="10"
+        android:hint="@string/enter_user"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
+        app:layout_constraintVertical_bias="0.256" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
