--- a/Experiments/Evan/demo2/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/Evan/demo2/app/src/main/res/layout/activity_main.xml
@@ -6,68 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/activity_main_textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719" />
-
-    <Button
-        android:id="@+id/activity_main_post_by_path_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:text="POST BY PATH"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_textView1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_answer_editText"
-        app:layout_constraintVertical_bias="0.621" />
-
-    <Button
-        android:id="@+id/activity_main_post_by_body_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="POST BY BODY"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_textView1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toEndOf="@+id/activity_main_post_by_path_button"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_answer_editText"
-        app:layout_constraintVertical_bias="0.621" />
-
     <EditText
-        android:id="@+id/activity_main_question_edit_text"
+        android:id="@+id/activity_main_welcome_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Question"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_textView1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.316" />
-
-    <EditText
-        android:id="@+id/activity_main_answer_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:hint="Answer"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_textView1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_question_edit_text"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
