--- a/Frontend/demo2/app/src/main/res/layout/activity_profileactivity.xml
+++ b/Frontend/demo2/app/src/main/res/layout/activity_profileactivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".model.Profileactivity">
+    tools:context=".Profileactivity">
 
     <TextView
         android:id="@+id/textView"
