created navbar and fragments for all navbar pages

--- a/Experiments/SampleLoginApp/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/SampleLoginApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".activity_login">
+    tools:context=".MainActivity">
 
     <ImageView
         android:layout_width="150dp"
