--- a/Frontend/demo2/app/src/main/res/layout/listview_items.xml
+++ b/Frontend/demo2/app/src/main/res/layout/listview_items.xml
@@ -7,8 +7,7 @@
     <TextView
         android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Animal : " />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/name"
