--- a/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
+++ b/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textview1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="#E8DDDD">
 
     <TextView
+        android:id="@+id/textView4"
+        android:layout_width="146dp"
+        android:layout_height="69dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="134dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="594dp"
+        android:text="Home Page"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="142dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="162dp"
+        android:layout_marginBottom="539dp"
+        android:text="Premium User"
+        android:textSize="30dp" />
+
+    <ImageButton
+        android:id="@+id/btntableclock"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Orders"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:layout_height="158dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="260dp"
+        android:layout_marginBottom="367dp"
+        app:srcCompat="@drawable/capture" />
 
 
 </RelativeLayout>
