--- a/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
+++ b/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
@@ -7,33 +7,6 @@
     android:layout_height="match_parent"
     android:background="#E8DDDD">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="146dp"
-        android:layout_height="69dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="134dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="594dp"
-        android:text="Home Page"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="142dp"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="162dp"
-        android:layout_marginBottom="539dp"
-        android:text="Premium User"
-        android:textSize="30dp" />
-
     <ImageButton
         android:id="@+id/btntableclock"
         android:layout_width="wrap_content"
@@ -43,6 +16,44 @@
         android:layout_marginEnd="260dp"
         android:layout_marginBottom="367dp"
         app:srcCompat="@drawable/capture" />
+
+    <ImageButton
+        android:id="@+id/btnplant"
+        android:layout_width="201dp"
+        android:layout_height="228dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="344dp"
+        app:srcCompat="@drawable/plant" />
+
+    <ImageButton
+        android:id="@+id/btnlipstick"
+        android:layout_width="266dp"
+        android:layout_height="322dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="283dp"
+        android:layout_marginEnd="141dp"
+        android:layout_marginBottom="126dp"
+        app:srcCompat="@drawable/lipstick" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="327dp"
+        android:layout_height="149dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="566dp"
+        app:srcCompat="@drawable/orders" />
 
 
 </RelativeLayout>
