--- a/Frontend/demo2/app/src/main/res/layout/activity_nike.xml
+++ b/Frontend/demo2/app/src/main/res/layout/activity_nike.xml
@@ -15,4 +15,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/nike" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="346dp"
+        android:layout_height="226dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.102"
+        app:srcCompat="@drawable/fair" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="314dp"
+        android:layout_height="154dp"
+        android:text="Great deals of shoes available here"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.81" />
 </androidx.constraintlayout.widget.ConstraintLayout>
