--- a/Frontend/demo2/app/src/main/res/layout/fragment_account.xml
+++ b/Frontend/demo2/app/src/main/res/layout/fragment_account.xml
@@ -56,7 +56,7 @@
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subscription"
+            android:text="Click For Offers"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
