--- a/Frontend/demo2/app/src/main/res/layout/activity_tableclock.xml
+++ b/Frontend/demo2/app/src/main/res/layout/activity_tableclock.xml
@@ -70,4 +70,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.878" />
+    <Button
+        android:id="@+id/btn_buysecond"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="displayToastMsg"
+        android:text="BUY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.427"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.607" />
 </androidx.constraintlayout.widget.ConstraintLayout>
