--- a/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
+++ b/Frontend/demo2/app/src/main/res/layout/fragment_orders.xml
@@ -8,30 +8,18 @@
     android:background="#E8DDDD">
 
     <ImageButton
-        android:id="@+id/btntableclock"
-        android:layout_width="241dp"
-        android:layout_height="161dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="91dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="173dp"
-        app:srcCompat="@drawable/capture" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="327dp"
-        android:layout_height="149dp"
+        android:id="@+id/btnclickmesorry"
+        android:layout_width="389dp"
+        android:layout_height="279dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="544dp"
-        app:srcCompat="@drawable/orders" />
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="-1dp"
+        android:layout_marginBottom="212dp"
+        app:srcCompat="@drawable/clickmepls" />
 
 
 </RelativeLayout>
